Fix for reward icons not outlined and black when opportunity unavailable, fixed blurry bus icon.

--- a/client/src/app/game/location/location.component.scss
+++ b/client/src/app/game/location/location.component.scss
@@ -225,7 +225,8 @@
 	&.transit {
 		background-image: cdn-image('icons/transit', c_scale, w_15);
 		&.notenough {
-			background-image: cdn-image('icons/transit-clear.png', c_scale, w_35);
+			background-image: cdn-image('icons/transit-clear', c_scale, w_35);
+			background-size: 35px;
 		}
 	}
 }
